// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/modal/demo/alert.md correctly 1`] = `
<div
  class="ej-wingblank ej-wingblank-lg"
>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      customized buttons
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      confirm
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      more than two buttons
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      promise
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/modal/demo/basic.md correctly 1`] = `
<div
  class="ej-wingblank ej-wingblank-lg"
>
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      basic
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-md"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      popup
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-md"
  />
</div>
`;

exports[`renders ./components/modal/demo/operation.md correctly 1`] = `
<div
  class="ej-wingblank ej-wingblank-lg"
>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      operation
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/modal/demo/prompt.md correctly 1`] = `
<div
  class="ej-wingblank ej-wingblank-lg"
>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      promise
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      defaultValue
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      secure-text
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      custom buttons
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="ej-button"
    role="button"
  >
    <span>
      login-password
    </span>
  </a>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
</div>
`;
